/*
 * This file is part of the NUbots Codebase.
 *
 * The NUbots Codebase is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The NUbots Codebase is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with the NUbots Codebase.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Copyright 2013 NUbots <nubots@nubots.net>
 */

syntax = "proto3";

package message.vision;

import "Vector.proto";

message VisualMesh {

    message Row {
        float phi      = 1;
        int32 segments = 2;
    }

    message Classification {
        int32          dimensions = 1;
        repeated float values     = 2;
    }

    uint32   camera_id                      = 1;
    repeated Row mesh                       = 2;
    repeated int32 indices                  = 3;
    repeated ivec6 neighbourhood            = 4;
    repeated ivec2 coordinates              = 5;
    repeated Classification classifications = 6;
}
